--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,10 @@
 #
 # JDBC connection properties
 #
-jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/carland?serverTimezone=UTC
-jdbc.user=springstudent
-jdbc.password=springstudent
-
-#
-# Connection pool properties
-#
-connection.pool.initialPoolSize=5
-connection.pool.minPoolSize=5
-connection.pool.maxPoolSize=30
-connection.pool.maxIdleTime=3000
+spring.datasource.driver=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/carland?serverTimezone=UTC
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
 
 
 server.port=9090
