add upload files service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.datasource.password=springstudent
 
 server.port=9090
 
+#
+# Uploading files properties
+#
+
+spring.servlet.multipart.max-file-size=2048KB
+spring.servlet.multipart.max-request-size=10240KB
