--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ server.port=9090
 
 spring.servlet.multipart.max-file-size=2048KB
 spring.servlet.multipart.max-request-size=10240KB
+
+spring.jpa.show-sql=true
